<resources>
    <string name="app_name">Rooms</string>
    <string name="feel_at_home">Feel at Home!</string>
    <string name="logo">Logo</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="have_an_account_sign_in">Have an account? Sign in!</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up!</string>
    <string name="sign_in">Sign in</string>

    <string name="invalid_username">Email not valid</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_name">Enter your name</string>

    <string name="oops_error_occured">Sorry we are not able to process your request right now, please try again.</string>
    <string name="auth_failed">An error occurred while logging you in.</string>
    <string name="title_activity_home">Home</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_dashboard_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_notifications_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="title_home">Bookings</string>
    <string name="title_dashboard">Hotels</string>
    <string name="title_notifications">Notifications</string>

    <string name="home_second">Home Second</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="no_bookings">You do not have any bookings… just yet</string>
    <string name="view_deal">View deal</string>
    <string name="no_hotels">No hotels… just yet</string>
    <string name="per_night">per night</string>
    <string name="book">Book</string>
    <string name="select_checkin_date">Select check in date</string>
    <string name="select_checkout_date">Select check out date</string>
    <string name="book_for_days">Book \"%s\" for %s</string>
    <string name="to">TO</string>

    <string name="banner_default_content"> </string>
    <string name="dismiss">dismiss</string>
    <string name="ok">OK</string>
    <string name="booking_success">Your booking has been successfully made</string>
    <string name="my_bookings">My Bookings</string>
    <string name="no_internet_text">We cannot connect to the Rooms network, please check your Internet connection.</string>
    <string name="select_a_room">Select a room</string>
    <string name="cache">Cache</string>
    <string name="clear_cache">Clear cache</string>
    <string name="night_mode">Night mode</string>
</resources>
